added API documentation
